@@ -1,5 +1,6 @@
 2005-05-25	Istvan Varga	<istvan@csounds.com>
 	* Engine/insert.c: fixed bug in ihold opcode
+	* Engine/rdorch.c: attempts at fixing else and endif bugs
 
 2005-05-24 Victor Lazzarini <victor.lazzarini@nuim.ie>
          *changes to rtcoreaudio.c to enable channel independence
